P6-97 Event timestamp should not be now

--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -17,7 +17,7 @@
       <td style="width: 11%">
         <p-calendar appendTo="body" [(ngModel)]="timestamp.eventTimestamp" hourFormat="24" monthNavigator="true" showButtonBar="true"
                     showIcon="true"
-                    [locale]="en" showTime="true" showWeek="true" yearNavigator="true"
+                    showTime="true" showWeek="true" yearNavigator="true"
                     yearRange="2010:2030"></p-calendar>
       </td>
       <td style="width: 8%">
