--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -12,11 +12,11 @@
         <p-calendar  appendTo="body" [(ngModel)]="timestamp.logOfTimestamp" hourFormat="24" monthNavigator="true" showButtonBar="true"
                     showIcon="true"
                     showTime="true"
-                    showWeek="true" yearNavigator="true" yearRange="2010:2030" [locale]="en"></p-calendar>
+                    showWeek="true" yearNavigator="true" yearRange="2010:2030"></p-calendar>
       </td>
       <td style="width: 11%">
         <p-calendar appendTo="body" [(ngModel)]="timestamp.eventTimestamp" hourFormat="24" monthNavigator="true" showButtonBar="true"
-                    showIcon="true"
+                    showIcon="true" [stepMinute]="5"
                     showTime="true" showWeek="true" yearNavigator="true"
                     yearRange="2010:2030"></p-calendar>
       </td>
