P6-97 Removed dummy localization

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -26,3 +26,7 @@ body {
   background-color: $steelGrey;
   font-family: Poppins,sans-serif;
 }
+
+.p-dropdown-panel {
+  min-width: 250px !important;
+}
