P6-97 Disabled 5 minute setting for event timestamp time selection

--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -16,7 +16,7 @@
       </td>
       <td style="width: 11%">
         <p-calendar appendTo="body" [(ngModel)]="timestamp.eventTimestamp" hourFormat="24" monthNavigator="true" showButtonBar="true"
-                    showIcon="true" [stepMinute]="5"
+                    showIcon="true"
                     showTime="true" showWeek="true" yearNavigator="true"
                     yearRange="2010:2030"></p-calendar>
       </td>
