--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -7,7 +7,7 @@
       <div class="p-col"></div>
       <div class="p-col tableHeader">
         <div class="tableHeader__buttons">
-          <p-button (onClick)="refreshTableData()" class="p-button-raised p-button-rounded"
+          <p-button (onClick)="refreshTable()" class="p-button-raised p-button-rounded"
                     icon="pi pi-refresh" pTooltip="Refresh table data." tooltipPosition="top" type="button"
                     tooltipStyleClass="ToolTipClass"></p-button>
         </div>
