--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -8,14 +8,14 @@
       <div class="p-col tableHeader">
         <div class="tableHeader__buttons">
           <p-button (onClick)="refreshTable()" class="p-button-raised p-button-rounded"
-                    icon="pi pi-refresh" pTooltip="Refresh table data." tooltipPosition="top" type="button"
+                    icon="pi pi-refresh" pTooltip="{{ 'general.table.header.refresh' | translate }}" tooltipPosition="top" type="button"
                     tooltipStyleClass="ToolTipClass"></p-button>
         </div>
         <div class="p-input-icon-left globalSearch">
           <i class="pi pi-search"></i>
           <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')"
-                 placeholder="Search in table" class="p-column-filter"
-                 pTooltip="This enables table search containing for Timestamp, Classifier Code, Event Type Code, Port From, Port To and Next Port">
+                 placeholder="{{ 'general.table.search.label' | translate }}" class="p-column-filter"
+                 pTooltip="{{ 'general.table.seach.tooltip' | translate }}">
         </div>
       </div>
     </div>
