--- a/ui/src/app/view/header/header.component.scss
+++ b/ui/src/app/view/header/header.component.scss
@@ -16,8 +16,8 @@
   }
 
   &__menuEntry {
-    .p-button-label {}
-      color: $foamWhite !important;
+    color: $foamWhite !important;
+    margin-right: 10px;
   }
 
   &__menuLabel {
@@ -38,5 +38,32 @@
     font-size: 10pt;
     float: left;
     clear: left;
+  }
+}
+
+p-dropdown::ng-deep {
+  .dropdown {
+    width: 100%;
+  }
+}
+
+.ui-dropdown-label-container {
+  width: 100%;
+}
+.ui-dropdown .ui-dropdown-clearable .ui-dropdown-label {
+  text-overflow: ellipsis;
+  padding-right: 2em !important;
+}
+::ng-deep .p-dropdown .p-dropdown-label {
+  text-overflow: ellipsis;
+  padding-right: 1em !important;
+}
+.p-dropdown-label{
+  font-size: $tableSize !important;
+}
+
+p-dropdown::ng-deep {
+  .dropdown {
+    width: 100%;
   }
 }
