--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -7,21 +7,29 @@
       <td style="width: 7%; padding-left: 0">
         <p-dropdown styleClass="dropdown" [(ngModel)]="timestamp.timestampType" [options]="timestampTypes"></p-dropdown>
       </td>
-      <td style="width: 4%"></td>
-      <td style="width: 11%">
-        <p-calendar  appendTo="body" [(ngModel)]="timestamp.logOfTimestamp" hourFormat="24" monthNavigator="true" showButtonBar="true"
-                    showIcon="true"
-                    showTime="true"
-                    showWeek="true" yearNavigator="true" yearRange="2010:2030"></p-calendar>
+      <td style="width: 2%"></td>
+      <td style="width: 15%;">
+        <div class="p-inputgroup">
+          <p-calendar appendTo="body" [(ngModel)]="logOfTimestampDate" hourFormat="24" monthNavigator="true" showButtonBar="false"
+                        showIcon="true" showWeek="true"
+                        yearNavigator="true" yearRange="2010:2030"
+                        styleClass="date-time-date-field" placeholder="Log date"></p-calendar>
+          <p-inputMask [(ngModel)]="logOfTimestampTime" mask="99:99" placeholder="Time" styleClass="datetime-time-time-field"></p-inputMask>
+          <button type="button" pButton pRipple icon="pi pi-clock" styleClass="p-button-success" (click)="setLogOfTimestampToNow()"></button>
+        </div>
       </td>
-      <td style="width: 11%">
-        <p-calendar appendTo="body" [(ngModel)]="timestamp.eventTimestamp" hourFormat="24" monthNavigator="true" showButtonBar="true"
-                    showIcon="true"
-                    showTime="true" showWeek="true" yearNavigator="true"
-                    yearRange="2010:2030"></p-calendar>
+      <td style="width: 15%;">
+        <div class="p-inputgroup">
+          <p-calendar appendTo="body" [(ngModel)]="eventTimestampDate" hourFormat="24" monthNavigator="true" showButtonBar="false"
+                        showIcon="true" showWeek="true"
+                        yearNavigator="true" yearRange="2010:2030"
+                        styleClass="date-time-date-field" placeholder="Event date"></p-calendar>
+          <p-inputMask [(ngModel)]="eventTimestampTime" mask="99:99" placeholder="Time" styleClass="datetime-time-time-field"></p-inputMask>
+          <button type="button" pButton pRipple icon="pi pi-clock" styleClass="p-button-success" (click)="setEventTimestampToNow()"></button>
+        </div>
       </td>
       <td style="width: 8%">
-        <p-dropdown styleClass="dropdown" [(ngModel)]="timestamp.portPrevious" [filter]="true" [options]="portOptions"
+        <p-dropdown appendTo="body" styleClass="dropdown" [(ngModel)]="timestamp.portPrevious" [filter]="true" [options]="portOptions"
                     filterBy="label,value.name">
           <ng-template let-port pTemplate="item">
             <div *ngIf="!port.value">
@@ -35,7 +43,7 @@
         </p-dropdown>
       </td>
       <td style="width: 7%">
-        <p-dropdown styleClass="dropdown" (onChange)="updateTerminalOptions(timestamp.portOfCall.id)" [(ngModel)]="timestamp.portOfCall"
+        <p-dropdown appendTo="body" styleClass="dropdown" (onChange)="updateTerminalOptions(timestamp.portOfCall.id)" [(ngModel)]="timestamp.portOfCall"
                     [filter]="true" [options]="portOptions"
                     filterBy="label,value.name">
           <ng-template let-port pTemplate="item">
@@ -50,7 +58,7 @@
         </p-dropdown>
       </td>
       <td style="width: 7%">
-        <p-dropdown styleClass="dropdown" [(ngModel)]="timestamp.portNext" [filter]="true" [options]="portOptions"
+        <p-dropdown appendTo="body" styleClass="dropdown" [(ngModel)]="timestamp.portNext" [filter]="true" [options]="portOptions"
                     filterBy="label,value.name">
           <ng-template let-port pTemplate="item">
             <div *ngIf="!port.value">
@@ -64,10 +72,10 @@
         </p-dropdown>
       </td>
       <td style="width: 6%">
-        <p-dropdown styleClass="dropdown" [(ngModel)]="timestamp.direction" [options]="directions"></p-dropdown>
+        <p-dropdown appendTo="body" styleClass="dropdown" [(ngModel)]="timestamp.direction" [options]="directions"></p-dropdown>
       </td>
       <td style="width: 7%">
-        <p-dropdown styleClass="dropdown" [(ngModel)]="timestamp.terminal" [disabled]="timestamp.portOfCall === null"
+        <p-dropdown appendTo="body" styleClass="dropdown" [(ngModel)]="timestamp.terminal" [disabled]="timestamp.portOfCall === null"
                     [filter]="true" [options]="terminalOptions" filterBy="label,value.terminalName">
           <ng-template let-terminal pTemplate="item">
             <div *ngIf="terminal.value">
