--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 //Dark navy blue
-$darkNavyBlue : #1E1E2C;
+$darkNavyBlue: #1E1E2C;
 //Foam white
 $foamWhite: #F8F7F7;
 //Teal blue
@@ -24,9 +24,20 @@ $tableSize: 12pt;
 
 body {
   background-color: $steelGrey;
-  font-family: Poppins,sans-serif;
+  font-family: Poppins, sans-serif;
 }
 
 .p-dropdown-panel {
   min-width: 250px !important;
+}
+
+.p-calendar .p-inputtext {
+  width: 110px !important;
+}
+
+.datetime-time-date-field {
+}
+
+.datetime-time-time-field {
+  width: 67px !important;
 }
