--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -41,3 +41,26 @@ body {
 .datetime-time-time-field {
   width: 67px !important;
 }
+
+.datetime-panel table th {
+  padding:  0 !important;
+}
+
+.datetime-panel table th > span {
+  width: 2rem !important;
+  height: 2rem !important;
+}
+
+.datetime-panel table td {
+  padding:  0 !important;
+}
+
+.datetime-panel table td > span {
+  width: 2rem !important;
+  height: 2rem !important;
+  border: 0.5px solid transparent !important;
+}
+
+.datetime-panel .p-datepicker-buttonbar {
+  padding: 0 !important;
+}
