--- a/ui/src/app/view/timestamp-comment-dialog/timestamp-comment-dialog.component.html
+++ b/ui/src/app/view/timestamp-comment-dialog/timestamp-comment-dialog.component.html
@@ -29,14 +29,15 @@
   <div id="commentContainer" class="p-col-12 p-md-10">
     <span class="p-float-label">
     <textarea id="commentbox" pInputTextarea [(ngModel)]="timestamp.changeComment" [disabled]="!editMode"></textarea>
-    <label for="commentbox">Comment for new timestamp</label>
+    <label for="commentbox">{{ 'general.comment.tooltip' | translate }}</label>
     </span>
   </div>
   <div class="p-col-12 p-md-6 p-lg-1" style="width: 100%" align="left">
     <span class="p-buttonset">
-        <button *ngIf="!editMode" (click)="close()" label="Close" pButton type="button"></button>
-        <button *ngIf="editMode" (click)="save()" icon="pi pi-check" label="Save" pButton type="button"></button>
-        <button *ngIf="editMode" (click)="cancelEdit()" class="p-button-warning" icon="pi pi-times" label="Cancel" pButton type="button"></button>
+        <button *ngIf="!editMode" (click)="close()" label="{{ 'general.close.label' | translate }}" pButton type="button"></button>
+        <button *ngIf="editMode" (click)="save()" icon="pi pi-check" label="{{ 'general.save.label' | translate }}" pButton type="button"></button>
+        <button *ngIf="editMode" (click)="cancelEdit()" class="p-button-warning" icon="pi pi-times" label="{{ 'general.cancel.label' | translate }}"
+                pButton type="button"></button>
     </span>
   </div>
 </div>
