--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -25,7 +25,7 @@
                     filterBy="label,value.name">
           <ng-template let-port pTemplate="item">
             <div *ngIf="!port.value">
-              <div>Select port</div>
+              <div>{{ 'general.port.select' | translate }}</div>
             </div>
             <div *ngIf="port.value">
               <div>{{port.value.unLocode}}</div>
@@ -40,7 +40,7 @@
                     filterBy="label,value.name">
           <ng-template let-port pTemplate="item">
             <div *ngIf="!port.value">
-              <div>Select port</div>
+              <div>{{ 'general.port.select' | translate }}</div>
             </div>
             <div *ngIf="port.value">
               <div>{{port.value.unLocode}}</div>
@@ -54,7 +54,7 @@
                     filterBy="label,value.name">
           <ng-template let-port pTemplate="item">
             <div *ngIf="!port.value">
-              <div>Select port</div>
+              <div>{{ 'general.port.select' | translate }}</div>
             </div>
             <div *ngIf="port.value">
               <div>{{port.value.unLocode}}</div>
@@ -83,7 +83,7 @@
       </td>
       <td style="width: 6%">
         <p-button (onClick)="addComment(timestamp)" icon="pi pi-comment"
-                  pTooltip="Add your comment and a delay reason to timestamp" tooltipPosition="top"
+                  pTooltip="{{ 'general.comment.tooltip' | translate }}" tooltipPosition="top"
                   tooltipStyleClass="ToolTipClass" class="buttonInTable"></p-button>
       </td>
       <td style="width: 3%">
