P6-107 Updating vessel selection in editor when vessel filter is selected

--- a/ui/src/app/view/app.component.html
+++ b/ui/src/app/view/app.component.html
@@ -17,7 +17,7 @@
       <div class="stickyFooterDiv">
         <app-timestamp-editor (timeStampAddedNotifier)="timeStampAddedHandler($event)"
                               [portOfCall]="portOfCall"
-                              [vesselSavedId]="vesselSavedId">
+                              [vesselId]="vesselId" [vesselSavedId]="vesselSavedId">
         </app-timestamp-editor>
         <app-timestamp-paginator [portCallTimeStampAdded]="portCallTimeStampAdded"
                                  [portCallTimeStampDeleted]="portCallTimeStampDeleted"
