P6-69 added default value to terminal dropdown for uniformity

--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -87,6 +87,9 @@
               <div class="terminalListDetails">{{terminal.value.terminalName}}</div>
               <div class="terminalListDetails">{{terminal.value.terminalOperator}}</div>
             </div>
+            <div *ngIf="!terminal.value">
+              <div>{{terminal.label}}</div>
+            </div>
           </ng-template>
         </p-dropdown>
       </td>
