P6-69 added localizations for outbound/inbound icons

--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -154,7 +154,7 @@
               pTooltip="{{ timestamp.messageDirection == null ?
                   '' :
                   (timestamp.messageDirection == 'inbound' ?
-                        'Inbound' : 'Outbound'
+                        ( 'general.direction.inbound' | translate ) : ( 'general.direction.outbound' | translate )
                   )
               }}"
               tooltipPosition="top" tooltipStyleClass="ToolTipClass">&nbsp;</span>
